# opencvstuff

./: .gitignore  boxtracker-2.py  boxtracker.py  callibrationserver.py  findyellow.py  nt_client.py  opencvtest.py
cpp/: CMakeLists.txt  boxtest.cpp
static/: colorvalues
templates/: calibration_template.html
